# hw-project-cookiecutter

./: .gitignore  LICENSE  README.md  TODO.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  AUTHORS.md  LICENSE  Makefile  README.md  macros.py  mkdocs.yml  pyproject.toml  {{cookiecutter.project_slug}}.kicad_pro
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/datasheets/: README.md
{{cookiecutter.project_slug}}/docs/: README.md
{{cookiecutter.project_slug}}/docs/blog/posts/: welcome.md
{{cookiecutter.project_slug}}/docs/design/: README.md
{{cookiecutter.project_slug}}/docs/hardware/: README.md  mechanical.md  wiring.md
{{cookiecutter.project_slug}}/docs/hardware/datasheets/: README.md
{{cookiecutter.project_slug}}/docs/updates/: .authors.yml  index.md
{{cookiecutter.project_slug}}/hardware/: README.md  {{cookiecutter.project_slug}}.kicad_sch
{{cookiecutter.project_slug}}/hardware/pcb/: README.md  {{cookiecutter.project_slug}}.kicad_pcb
{{cookiecutter.project_slug}}/hardware/wiring/: README.md  sample.yml
{{cookiecutter.project_slug}}/production/: README.md
{{cookiecutter.project_slug}}/production/bom/: README.md  bom.csv
{{cookiecutter.project_slug}}/production/cad/: README.md
{{cookiecutter.project_slug}}/production/gerber/: README.md
{{cookiecutter.project_slug}}/production/pnp/: README.md
{{cookiecutter.project_slug}}/software/: README.md
{{cookiecutter.project_slug}}/software/bootloader/: README.md
{{cookiecutter.project_slug}}/software/firmware/: README.md
(+2 files in other folders)
