[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}}"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9"
mkdocs-mermaid2-plugin = "^1.1"
mkdocs-macros-plugin = "^1.0"
{% if cookiecutter.create_blog %}
mkdocs-rss-plugin = "^1.12"
{% endif %}
wireviz = "^0.3"
wireviz_fences = { git = "git@github.com:petrilli/wireviz_fences.git" }